--- a/app/src/main/res/layout/activity_scan_result.xml
+++ b/app/src/main/res/layout/activity_scan_result.xml
@@ -8,17 +8,17 @@
     tools:context=".ui.scanResult.ScanResult">
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
         android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/ic_back_white"/>
     <ImageView
         android:id="@+id/check_ticket"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="@dimen/_180sdp"
+        android:layout_height="@dimen/_180sdp"
+        android:layout_marginTop="@dimen/_110sdp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/ic_valid_tag"/>
     <TextView
@@ -26,12 +26,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/check_ticket"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
         android:textAlignment="center"
         android:fontFamily="@font/nunitosans_10pt_bold"
         android:text="Valid Ticket \n Please allow the patron to enter"
         android:textColor="@color/black"
         android:textFontWeight="700"
-        android:textSize="20sp" />
+        android:textSize="@dimen/_14sdp" />
 </RelativeLayout>
