--- a/app/src/main/res/layout/activity_scan_with_camera.xml
+++ b/app/src/main/res/layout/activity_scan_with_camera.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,37 +12,42 @@
         app:autoFocusButtonVisible="false"
         app:frameAspectRatioHeight="1"
         app:frameAspectRatioWidth="1"
-        app:frameThickness="5dp" />
+        app:frameThickness="@dimen/_5sdp" />
 
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:padding="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/ic_cancel" />
+        android:layout_width="@dimen/_28sdp"
+        android:layout_height="@dimen/_28sdp"
+        android:layout_marginStart="@dimen/_7sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:padding="@dimen/_5sdp"
+        android:src="@drawable/ic_cancel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-
-        <ImageView
+    <!--    <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_scaner"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
+            android:src="@drawable/ic_scaner"
             android:layout_marginEnd="75dp"
-            app:tint="@color/white" />
+            app:tint="@color/white" />-->
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_back"
-            android:gravity="center_horizontal"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginTop="10dp"
-            android:text="Scan Ticket"
-            android:textSize="20sp" />
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_28sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:drawableStart="@drawable/ic_scan"
+        android:drawablePadding="@dimen/_10sdp"
+        android:gravity="center_horizontal"
+        android:src="@drawable/ic_back"
+        android:text="Scan Ticket"
+        android:textSize="@dimen/_18sdp"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
