--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -1,175 +1,240 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".ui.change_password.ChangePassword">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_back_white"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:layout_marginStart="30dp"
-            android:text="Change Password"
-            android:textSize="20sp"
-            android:fontFamily="@font/nunitosans_10pt_bold"
-            android:textFontWeight="800"
-            android:textColor="@color/black"
-            />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="Old Password"
-        android:textColor="@color/black"
-        android:textFontWeight="400"
-        android:fontFamily="@font/nunitosans_7pt_regular"
-        android:textSize="14sp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="horizontal"
-        android:background="@drawable/bg_rounded_white"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/ic_pass" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:hint="Enter your password" />
-
-    </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="New Password"
-        android:textColor="@color/black"
-        android:textFontWeight="400"
-        android:fontFamily="@font/nunitosans_7pt_regular"
-        android:textSize="14sp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="horizontal"
-        android:background="@drawable/bg_rounded_white"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/ic_pass" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:hint="Enter your password" />
-
-    </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="Confirm Password"
-        android:textColor="@color/black"
-        android:textFontWeight="400"
-        android:fontFamily="@font/nunitosans_7pt_regular"
-        android:textSize="14sp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="horizontal"
-        android:background="@drawable/bg_rounded_white"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/ic_pass" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:hint="Enter your password" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/login"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/bg_rounded_blue"
-        android:gravity="center_vertical">
+        android:background="@color/white"
+        tools:context=".ui.change_password.ChangePassword">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_back"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_7sdp"
+                android:src="@drawable/ic_back_white" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginStart="@dimen/_30sdp"
+                android:text="Change Password"
+                android:textSize="@dimen/_15sdp"
+                android:fontFamily="@font/nunitosans_10pt_bold"
+                android:textFontWeight="800"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Change"
-            android:textColor="@color/white"
-            android:textFontWeight="700"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:text="Old Password"
+            android:textColor="@color/black"
+            android:textFontWeight="400"
             android:fontFamily="@font/nunitosans_7pt_regular"
-            android:textSize="18sp"/>
+            android:textSize="@dimen/_11sdp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:orientation="horizontal"
+            android:background="@drawable/bg_rounded_white"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="@dimen/_17sdp"
+                android:layout_height="@dimen/_17sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_12sdp"
+                android:layout_marginRight="@dimen/_12sdp"
+                android:src="@drawable/ic_pass" />
+
+            <EditText
+                android:id="@+id/old_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:imeOptions="actionNext"
+                android:singleLine="true"
+                android:inputType="textPassword"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:hint="Enter your password" />
+
+        </LinearLayout>
+        <TextView
+            android:id="@+id/old_password_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:text="New Password"
+            android:textColor="#FF0000"
+            android:visibility="gone"
+            android:textFontWeight="400"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:textSize="@dimen/_11sdp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="New Password"
+            android:textColor="@color/black"
+            android:textFontWeight="400"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:textSize="@dimen/_11sdp" />
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:orientation="horizontal"
+            android:background="@drawable/bg_rounded_white"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="@dimen/_17sdp"
+                android:layout_height="@dimen/_17sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_12sdp"
+                android:layout_marginRight="@dimen/_12sdp"
+                android:src="@drawable/ic_pass" />
+
+            <EditText
+                android:id="@+id/new_password"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:imeOptions="actionNext"
+                android:singleLine="true"
+                android:inputType="textPassword"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:hint="Enter your password" />
+
+        </LinearLayout>
+        <TextView
+            android:id="@+id/new_password_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:text="New Password"
+            android:textColor="#FF0000"
+            android:visibility="gone"
+            android:textFontWeight="400"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:textSize="@dimen/_11sdp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="Confirm Password"
+            android:textColor="@color/black"
+            android:textFontWeight="400"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:textSize="@dimen/_11sdp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:orientation="horizontal"
+            android:background="@drawable/bg_rounded_white"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="@dimen/_17sdp"
+                android:layout_height="@dimen/_17sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_12sdp"
+                android:layout_marginRight="@dimen/_12sdp"
+                android:src="@drawable/ic_pass" />
+
+            <EditText
+                android:id="@+id/confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:imeOptions="actionDone"
+                android:singleLine="true"
+                android:inputType="textPassword"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:hint="Enter your password" />
+
+        </LinearLayout>
+        <TextView
+            android:id="@+id/confirm_password_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:text="New Password"
+            android:textColor="#FF0000"
+            android:visibility="gone"
+            android:textFontWeight="400"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:textSize="@dimen/_11sdp" />
+        <LinearLayout
+            android:id="@+id/change_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_35sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:orientation="vertical"
+            android:background="@drawable/bg_rounded_blue"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Change"
+                android:textColor="@color/white"
+                android:textFontWeight="700"
+                android:fontFamily="@font/nunitosans_7pt_regular"
+                android:textSize="@dimen/_14sdp" />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
