--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".ui.home.HomeFragment"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="@dimen/_10sdp"
+    android:layout_marginRight="@dimen/_10sdp"
+    android:layout_marginBottom="@dimen/_10sdp"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/_40sdp"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,33 +23,37 @@
             android:background="@drawable/bg_rounded_white_10"
             android:orientation="horizontal">
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="@dimen/_17sdp"
+                android:layout_height="@dimen/_17sdp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_7sdp"
                 android:src="@drawable/ic_search"/>
             <EditText
+                android:id="@+id/et_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search...."
+                android:imeOptions="actionDone"
+                android:singleLine="true"
                 android:background="@null"
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:textColorHint="#B5C2CC"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="47dp"
-            android:layout_height="47dp"
+            android:id="@+id/searchText"
+            android:layout_width="@dimen/_38sdp"
+            android:layout_height="@dimen/_38sdp"
             android:gravity="center"
-
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_5sdp"
             android:layout_gravity="center"
             android:background="@drawable/bg_blue_rounded_5">
+
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_search"
                 app:tint="@color/white" />
@@ -61,14 +65,19 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:fontFamily="@font/nunitosans_10pt_bold"
-        android:textSize="18sp"
-        android:layout_margin="5dp"
+        android:textSize="@dimen/_14sdp"
+        android:layout_margin="@dimen/_5sdp"
         android:text="Event List" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    
-
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 </LinearLayout>
