--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -7,7 +7,221 @@
 
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_color"
+        tools:context=".ui.change_password.ChangePassword">
+
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_7sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:src="@drawable/ic_back_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/nunitosans_10pt_bold"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/change_password"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_15ssp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_old_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:text="@string/old_password"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_back" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/old_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:background="@drawable/bg_rounded_white"
+            android:drawableStart="@drawable/ic_pass"
+            android:drawablePadding="@dimen/_10sdp"
+            android:hint="@string/enter_your_password"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:paddingStart="@dimen/_10sdp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_old_pass" />
+
+        <TextView
+            android:id="@+id/old_password_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:text="@string/new_password"
+            android:textColor="#FF0000"
+            android:textSize="@dimen/_11ssp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/old_password" />
+
+        <TextView
+            android:id="@+id/tv_new_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:text="@string/new_password"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/old_password_error" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/new_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:background="@drawable/bg_rounded_white"
+            android:drawableStart="@drawable/ic_pass"
+            android:drawablePadding="@dimen/_10sdp"
+            android:hint="@string/enter_your_password"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:paddingStart="@dimen/_10sdp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_new_pass" />
+
+        <TextView
+            android:id="@+id/new_password_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:text="@string/new_password"
+            android:textColor="#FF0000"
+            android:textSize="@dimen/_11ssp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/new_password" />
+
+        <TextView
+            android:id="@+id/tv_confirm_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:text="@string/confirm_password"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/new_password_error" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:background="@drawable/bg_rounded_white"
+            android:drawableStart="@drawable/ic_pass"
+            android:drawablePadding="@dimen/_10sdp"
+            android:hint="@string/enter_your_password"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:paddingStart="@dimen/_10sdp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_pass" />
+
+        <TextView
+
+            android:id="@+id/confirm_password_error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/nunitosans_7pt_regular"
+            android:text="@string/new_password"
+            android:textColor="#FF0000"
+            android:textSize="@dimen/_11ssp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/confirm_password" />
+
+
+        <Button
+            style="@style/PrimaryButton"
+            android:id="@+id/change_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_49sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_25sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:fontFamily="@font/nunitosans_7pt_bold"
+            android:text="@string/change"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/confirm_password_error" />
+
+
+<!--            <LinearLayout-->
+<!--                android:id="@+id/change_password"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="@dimen/_40sdp"-->
+<!--                android:layout_marginTop="@dimen/_35sdp"-->
+<!--                android:layout_marginBottom="@dimen/_20sdp"-->
+<!--                android:layout_marginLeft="@dimen/_15sdp"-->
+<!--                android:layout_marginRight="@dimen/_15sdp"-->
+<!--                android:orientation="vertical"-->
+<!--                android:background="@drawable/bg_rounded_blue"-->
+<!--                android:gravity="center_vertical">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:gravity="center"-->
+<!--                android:text="Change"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textFontWeight="700"-->
+<!--                android:fontFamily="@font/nunitosans_7pt_regular"-->
+<!--                android:textSize="@dimen/_14sdp" />-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -30,9 +244,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:layout_marginStart="@dimen/_30sdp"
+                android:gravity="center_vertical|center_horizontal"
                 android:text="Change Password"
+                android:layout_marginRight="@dimen/_45sdp"
                 android:textSize="@dimen/_15sdp"
                 android:fontFamily="@font/nunitosans_10pt_bold"
                 android:textFontWeight="800"
@@ -79,7 +293,6 @@
                 android:inputType="textPassword"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black"
                 android:hint="Enter your password" />
 
         </LinearLayout>
@@ -138,7 +351,6 @@
                 android:inputType="textPassword"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black"
                 android:hint="Enter your password" />
 
         </LinearLayout>
@@ -195,7 +407,6 @@
                 android:inputType="textPassword"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black"
                 android:hint="Enter your password" />
 
         </LinearLayout>
@@ -236,5 +447,5 @@
                 android:textSize="@dimen/_14sdp" />
 
         </LinearLayout>
-    </LinearLayout>
+    </LinearLayout>-->
 </layout>
