--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
                 android:fontFamily="@font/nunitosans_10pt_bold"
                 android:text="Enter your details below to scan tickets."
                 android:textColor="#A2AEC1"
-                android:textSize="@dimen/_12sdp"/>
+                android:textSize="@dimen/_12ssp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
-                    android:hint="Enter text" />
+                    android:hint="Enter email address" />
 
             </LinearLayout>
             <TextView
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:text="Forget Password ?"
+                android:text="@string/forgot_password"
                 android:textColor="@color/black"
                 android:textFontWeight="700"
                 android:fontFamily="@font/nunitosans_7pt_regular"
