--- a/app/src/main/res/layout/activity_scan_result.xml
+++ b/app/src/main/res/layout/activity_scan_result.xml
@@ -1,37 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".ui.scanResult.ScanResult">
-    <ImageView
-        android:id="@+id/iv_back"
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:src="@drawable/ic_back_white"/>
-    <ImageView
-        android:id="@+id/check_ticket"
-        android:layout_width="@dimen/_180sdp"
-        android:layout_height="@dimen/_180sdp"
-        android:layout_marginTop="@dimen/_110sdp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_valid_tag"/>
-    <TextView
-        android:id="@+id/txt_name"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/check_ticket"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_10sdp"
-        android:textAlignment="center"
-        android:fontFamily="@font/nunitosans_10pt_bold"
-        android:text="Valid Ticket \n Please allow the patron to enter"
-        android:textColor="@color/black"
-        android:textFontWeight="700"
-        android:textSize="@dimen/_14sdp" />
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:background="@color/bg_color"
+        tools:context=".ui.scanResult.ScanResult">
+
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_back_white" />
+
+        <ImageView
+            android:id="@+id/check_ticket"
+            android:layout_width="@dimen/_180sdp"
+            android:layout_height="@dimen/_180sdp"
+            android:layout_marginTop="@dimen/_80sdp"
+            android:layout_centerHorizontal="true"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_valid_tag" />
+
+        <TextView
+            android:id="@+id/txt_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/check_ticket"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:textAlignment="center"
+            android:fontFamily="@font/nunitosans_10pt_bold"
+            android:text="@string/valid_ticket"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/check_ticket"
+            android:textSize="@dimen/_14ssp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
