--- a/app/src/main/res/layout/home_item_layout.xml
+++ b/app/src/main/res/layout/home_item_layout.xml
@@ -17,7 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
         android:layout_gravity="center"
         android:orientation="vertical">
         <TextView
