--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
 
     <!-- Primary brand color. -->
 
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">#2F34B2</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -22,4 +22,16 @@
     <style name="Theme.ReminisceTicketing.AppBarOverlay"
         parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.ReminisceTicketing.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="PrimaryButton" parent="Widget.MaterialComponents.Button">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">center</item>
+
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/nunitosans_7pt_bold</item>
+        <item name="android:textDirection">locale</item>
+
+    </style>
 </resources>
